add default.html and change index.html

--- a/default.html
+++ b/default.html
@@ -1,6 +1,4 @@
 <!DOCTYPE HTML>
-
-<!-- This is a really important file -->
 <html manifest="">
 <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
     <title>TryP04</title>
-    <!-- The line below must be kept intact for Sencha Cmd to build your application -->
-    <script id="microloader" type="text/javascript" src="bootstrap.js"></script>
+    
+	
 </head>
 <body>
+	<div>This page will link to index.html</div>
 </body>
 </html>
