explain this page is the default page

--- a/default.html
+++ b/default.html
@@ -10,6 +10,6 @@
 	
 </head>
 <body>
-	<div>This page will link to index.html</div>
+	<div>This page will link to index.html, and this is also the default page for this project.</div>
 </body>
 </html>
