index.html was being changed

--- a/index.html
+++ b/index.html
@@ -12,5 +12,6 @@
     <script id="microloader" type="text/javascript" src="bootstrap.js"></script>
 </head>
 <body>
+    <div>change from master</div>
 </body>
 </html>
